--- a/app/views/heroku.scala.html
+++ b/app/views/heroku.scala.html
@@ -1,7 +1,7 @@
 @(message: String)
 
 @main("Heroku setup") {
-<div>
+<div class="page-header">
 	<h1>Herokuセットアップ<span style="float:right;font-size:smaller;">Session:【14-E-5】 #devsumiE</span></h1>
 </div>
 <div class="row">
@@ -9,14 +9,19 @@
 		<h2>サインアップ</h2>
 		<p><a href="https://www.heroku.com/" target="_blank">https://www.heroku.com/</a></p>
 		<img src="/assets/images/heroku.png" style="width:100%;">
-		<p>クレジットカード不要なので準備するものはメールアドレスだけ</p>
+		<ul>
+			<li>メールアドレスを登録</li>
+			<li>無料(クレジットカード不要)</li>
+		</ul>
 	</div>
 	<div class="col-sm-12">
 		<h2>Toolbelt(CLIツール)インストール</h2>
 		<p><a href="https://toolbelt.heroku.com/osx" target="_blank">https://toolbelt.heroku.com/osx</a></p>
 		<img src="/assets/images/toolbelt.png" style="width:100%;">
-		<p>Gitコマンド込み</p>
-		<p>HerokuへのSSH鍵登録もやってくれる</p>
+		<ul>
+			<li>Gitコマンド込み</li>
+			<li>HerokuへのSSH鍵登録もやってくれる</li>
+		</li>
 	</div>
 	<div class="col-sm-12">
 		<p>以上、終わり</p>
