--- a/app/views/architecture.scala.html
+++ b/app/views/architecture.scala.html
@@ -1,7 +1,7 @@
 @(message: String)
 
 @main("Architecture") {
-<div>
+<div class="page-header">
 	<h1><span style="float:right;font-size:smaller;">Session:【14-E-5】 #devsumiE</span></h1>
 </div>
 <div class="row">
