--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,11 +1,13 @@
 @(message: String)
 
 @main("Time Attack") {
-<div>
+<div class="page-header">
 	<h1>Herokuでターイムアタック！<span style="float:right;font-size:smaller;">Session:【14-E-5】 #devsumiE</span></h1>
 </div>
 <div style="font-size:xx-large;">
-	デモ：WebSocketでHerokuに負荷をかけよう！<br>
+	<div class="alert alert-info">
+		デモ：WebSocketでHerokuに負荷をかけよう！
+	</div>
 	<a href="http://ws-vote.herokuapp.com/" target="_blank" style="font-size:48px;">http://ws-vote.herokuapp.com/</a>
 </div>
 <div class="row">
