--- a/app/views/summary.scala.html
+++ b/app/views/summary.scala.html
@@ -1,23 +1,28 @@
 @(message: String)
 
 @main("Summary") {
-<div>
+<div class="page-header">
 	<h1>まとめ<span style="float:right;font-size:smaller;">Session:【14-E-5】 #devsumiE</span></h1>
 </div>
-<div class="row">
+<div class="row" style="font-size:28px;">
 	<div class="col-sm-12">
-		<ul>
-			<li>試してみるだけなら無償なので、とりあえず試してみる価値はある</li>
-			<li>豊富なアドオンによって作らなければならないもの、用意しなければならないものが激減する</li>
-			<li>スケールアウト、スケールアップともにコマンド一発(またはWebUI)で可能</li>
-			<li>FLECTではHerokuで開発したい開発者を<a href="http://www.flect.co.jp/recruit/index.html" target="_blank">大募集中</a></li>
-		</ul>
-		<p>ところでHerokuの弱点は。。。。</p>
-		<ul>
-			<li style="color:red;font-weight:bold;">サーバーが日本に無い</li>
-			<li>東海岸との往復なのでレイテンシはそれなり。。。これが理由でEC2になることも。</li>
-		</ul>
-		<p>技術的には東京リージョンに置くことも可能なはずなので、ユーザーが増えれば日本に来るかも。。。。</p>
+		<div>
+			<ul>
+				<li>試してみるだけなら無償なので、とりあえず試してみる価値はある</li>
+				<li>豊富なアドオンによって作らなければならないもの、用意しなければならないものが激減する</li>
+				<li>スケールアウト、スケールアップともにコマンド一発(またはWebUI)で可能</li>
+				<li>FLECTではHerokuで開発したい開発者を<a href="http://www.flect.co.jp/recruit/index.html" target="_blank">大募集中</a></li>
+			</ul>
+		<div style="margin-top:40px;">
+			<p>ところでHerokuの弱点は。。。。</p>
+		</div>
+		<div>
+			<ul>
+				<li style="color:red;font-weight:bold;">サーバーが日本に無い</li>
+				<li>東海岸との往復なのでレイテンシはそれなり。。。これが理由でEC2になることも。</li>
+			</ul>
+			<p>技術的には東京リージョンに置くことも可能なはずなので、ユーザーが増えれば日本に来るかも。。。。</p>
+		</div>
 	</div>
 </div>
 }
