Add logo on navbar

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -47,6 +47,7 @@
 							</ul>
 						</li>
 					</ul>
+					<img  class="pull-right" style="margin-top:5px;height:35px;" src="/assets/images/devsumi.jpg"/>
 				</div>
 			</div>
 		</div>
