--- a/app/views/architecture.scala.html
+++ b/app/views/architecture.scala.html
@@ -2,7 +2,7 @@
 
 @main("Architecture") {
 <div class="page-header">
-	<h1><span style="float:right;font-size:smaller;">Session:【14-E-5】 #devsumiE</span></h1>
+	<h1>&nbsp;<span style="float:right;font-size:smaller;">Session:【14-E-5】 #devsumiE</span></h1>
 </div>
 <div class="row">
 	<div class="col-sm-12">
