--- a/app/views/aboutme.scala.html
+++ b/app/views/aboutme.scala.html
@@ -4,14 +4,21 @@
 <div class="page-header">
 	<h1>自己紹介<span style="float:right;font-size:smaller;">Session:【14-E-5】 #devsumiE</span></h1>
 </div>
-<div style="font-size:xx-large;" class="alert alert-info">
-	小西俊司(@@shunjikonishi)
+<div style="font-size:xx-large;">
+	<div class="alert alert-info">
+		デモ：WebSocketでHerokuに負荷をかけよう！
+	</div>
+	<a href="http://ws-vote.herokuapp.com/" target="_blank" style="font-size:48px;">http://ws-vote.herokuapp.com/</a>
+	<hr>
 </div>
 <div class="row">
 	<div class="col-sm-5">
 		<img src="/assets/images/aboutme.png" style="width:100%;" />
 	</div>
 	<div class="col-sm-7">
+		<div style="font-size:xx-large;" class="pull-right">
+			小西俊司(@@shunjikonishi)
+		</div>
 		<dl>
 			<dt>株式会社フレクト</dt>
 			<dd>
