--- a/app/views/architecture.scala.html
+++ b/app/views/architecture.scala.html
@@ -2,7 +2,14 @@
 
 @main("Architecture") {
 <div class="page-header">
-	<h1>&nbsp;<span style="float:right;font-size:smaller;">Session:【14-E-5】 #devsumiE</span></h1>
+	<h1>アプリ構成<span style="float:right;font-size:smaller;">Session:【14-E-5】 #devsumiE</span></h1>
+</div>
+<div style="font-size:xx-large;">
+	<div class="alert alert-info">
+		デモ：WebSocketでHerokuに負荷をかけよう！
+	</div>
+	<a href="http://ws-vote.herokuapp.com/" target="_blank" style="font-size:48px;">http://ws-vote.herokuapp.com/</a>
+	<hr>
 </div>
 <div class="row">
 	<div class="col-sm-12">
