--- a/app/views/summary.scala.html
+++ b/app/views/summary.scala.html
@@ -26,15 +26,14 @@
 		</div>
 	</div>
 </div>
+<script src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.easing.min.js"))" type="text/javascript"></script>
 <script>
 $(function() {
 	$("#weakpoint").click(function() {
 		var $target = $("#weakpoint2");
-		$target.slideDown("slow");
-		setTimeout(function() {
-	        var targetOffset = target.offset().top;
-    	    $('html,body').animate({scrollTop: targetOffset},400,"easeInOutQuart");
-    	}, 1000);
+		$target.show();
+        var targetOffset = $target.offset().top;
+   	    $('html,body').animate({scrollTop: targetOffset},400,"easeInOutQuart");
 	});
 })
 </script>
