--- a/app/views/aboutme.scala.html
+++ b/app/views/aboutme.scala.html
@@ -19,6 +19,7 @@
 		<div style="font-size:xx-large;" class="pull-right">
 			小西俊司(@@shunjikonishi)
 		</div>
+		<div class="clearfix"></div>
 		<dl>
 			<dt>株式会社フレクト</dt>
 			<dd>
