--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -54,5 +54,6 @@
 		<div class="container content" style="padding-top:40px;">
 			@content
 		</div>
+		<div style="height:100px;"></div>
 	</div>
 </html>
