Add description of finished

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,7 +6,8 @@
 </div>
 <div style="font-size:xx-large;">
 	<div class="alert alert-info">
-		デモ：WebSocketでHerokuに負荷をかけよう！
+		デモ：WebSocketでHerokuに負荷をかけよう！<br>
+		(DevSumiでのデモは終了しました。)
 	</div>
 	<a href="http://ws-vote.herokuapp.com/" target="_blank" style="font-size:48px;">http://ws-vote.herokuapp.com/</a>
 	<hr>
@@ -27,7 +28,17 @@
 				<li>ボタンの色に深い意味はありません。</li>
 			</ul>
 		</div>
-		<div class="pull-right" style="margin-top:100px;"><img src="/assets/images/devsumi.jpg"/></div>
+		<div class="alert alert-success">
+			<div>
+				これはセッション開講時、約2時間オープンしていたルームでの結果です。<br>
+				約200万回クリックされましたが、Herokuは問題なくリクエストを捌きました。
+			</div>
+			<div>
+				現在は上記リンクは制限時間なしの新しい部屋にリンクしています。<br>
+				(ただしDyno数を下げているので負荷には強くありません。)
+			</div>
+		</div>
+		<div class="pull-right"><img src="/assets/images/devsumi.jpg"/></div>
 	</div>
 </div>
 }
