Add link to blog

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,7 +7,8 @@
 <div style="font-size:xx-large;">
 	<div class="alert alert-info">
 		デモ：WebSocketでHerokuに負荷をかけよう！<br>
-		(DevSumiでのデモは終了しました。)
+		(DevSumiでのデモは終了しました。)<br>
+		デモ結果の考察と詳細レポートは<a class="alert-link" href="http://blog.flect.co.jp/labo/2014/02/devsumiheroku-023e.html" target="_blank">FLECTのR&amp;Dブログ</a>にあります。
 	</div>
 	<a href="http://ws-vote.herokuapp.com/" target="_blank" style="font-size:48px;">http://ws-vote.herokuapp.com/</a>
 	<hr>
